tests/ui/compile-fail/init/missing_error_type.stderr
error: unexpected end of macro invocation
 --> tests/ui/compile-fail/init/missing_error_type.rs:8:43
  |
8 |     let _ = init!(Foo { x: Box::new(0)? }?);
  |                                           ^ missing tokens in macro arguments
  |
note: while trying to match meta-variable `$err:ty`
 --> src/lib.rs
  |
  |     }? $err:ty) => {
  |        ^^^^^^^
